src/modules/physics/vx_physics.h

FFI_EXPORT double calculate_spring_force(double distance, double velocity, double stiffness, double damping);
FFI_EXPORT double calculate_jiggle_physics(double time, double frequency, double amplitude, double decay);
FFI_EXPORT double fast_lerp(double a, double b, double t);